<resources>
    <string name="app_name">IndianFoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_register">Registers</string>
    <string name="menu_restaurant">Indian Restaurant</string>
    <string name="menu_Logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Food Lovers</string>

    <string-array name="description">
        <item>Sahars Kitchen is a completely family owned restaurant serving exotic and deliciously prepared Indian cuisine</item>

        <item>Casual restaurant with classic Indian dishes, a bar serving cocktails and a weekday lunch buffet.</item>

        <item>Relaxed kitchen offering Indian staples, including samosas, vindaloo and biryani, plus lunch deals.</item>

        <item> Fresh food and hard working staff, family friendly environment, and good prices.</item>

        <item>Relaxed eatery with a comfortable vibe dispensing Indian standards, including vindaloo and korma.</item>

        <item>Stylish setting for vegan and vegetarian Indian cuisine with custom spice levels and a lunch buffet.</item>

        <item>Neighborhood Indian destination preparing regional recipes and a lunch buffet to eat in or take out.</item>

        <item>Informal counter-serve offering takeaway Indian fare such as dosas, biriyani and curry</item>
    </string-array>

    <string-array name="websites">
        <item>https://saharskitchen.com/</item>

        <item>http://empressofindia.ca/</item>

        <item>http://www.vijaysindiancuisine.com/</item>

        <item> https://www.modernindiarestaurant.com/</item>

        <item>http://www.welcometograinofsalt.com/</item>

        <item>https://www.saffronkitchen.ca/</item>

        <item>http://masalabay.com/</item>

        <item>http://www.shiriskitchen.ca/</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
