<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Register"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_Menu"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_restaurant" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_Logout" />

        </menu>
    </item>

</menu>
